force-app/main/default/objects/AccountBusinessDivisions__c/AccountBusinessDivisions__c.object-meta.xml
<CustomObject>
    <label>Account Business Divisions</label>
    <nameField>
        <label>ABD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Business Divisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>