force-app/main/default/objects/AccountBusinessDivisions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Business Divisions</relationshipLabel>
    <relationshipName>Account_Business_Divisions</relationshipName>
    <type>Lookup</type>
</CustomField>