force-app/main/default/objects/AccountBusinessDivisions__c/validationRules/Do_not_change_Business_Division.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_change_Business_Division</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(BusinessDivision__c)</errorConditionFormula>
    <errorMessage>Business Division can not be updated. Create a new record.</errorMessage>
</ValidationRule>